# seamless-share

./: README.md  pyproject.toml  replay-implementation-plan.md  replay-plan.md  usage-patterns.md  why-not-implementation-plan.md  why-not-plan.md
seamless_share/: __init__.py  cli.py
seamless_share/replay/: CHANGELOG.md  README.md  __init__.py  api.py  auth.py  config.py  findings.md  models.py  render.py  report.py  schema.json
seamless_share/why_not/: CHANGELOG.md  README.md  __init__.py  api.py  deep.py  diff.py  endpoints.py  errors.py  lookup.py  models.py  references.py  render.py  schema.json  selection.py
tests/: test_api_cli.py  test_diff.py  test_readonly.py  test_schema.py  test_selection.py
tests/replay/: test_api_cli_equivalence.py  test_cli.py  test_models.py  test_replay_schema.py
